<resources>
    <string name="app_name">Rhythmbox Remote</string>

    <string name="time_format">%1$s/%2$s</string>

    <string name="media_previous">\u23ee</string>
    <string name="media_next">\u23ed</string>
    <string name="media_stop">\u23f9</string>
    <string name="media_play">\u25b6</string>
    <string name="media_pause">\u23f8</string>

    <string name="media_speaker_volume_lower">\u1F509</string>
    <string name="media_speaker_volume_higher">\u1F50A</string>
    <string name="media_speaker_mute">\u1F507</string>

    <string name="volume_label">Volume</string>
    <string name="volume_lower">-</string>
    <string name="volume_higher">+</string>
    <string name="volume_mute">/</string>
    <string name="volume_format">%1$d/100</string>

    <string name="ip_hint">Enter IP Address</string>
    <string name="connect_label">Connect</string>

    <string name="scanning">Scanning for servers</string>
    <string name="scan_complete">Scan Complete</string>

    <string name="no_connection_error_toast">No Connection</string>

</resources>
