<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--input for ip-->

    <!-- make way to save favorites and have them as dropdown options-->

    <!--current track info-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/track" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/artist" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/album"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/time"
        android:textSize="50sp"
        android:textAlignment="center"
        android:layout_gravity="center"/>


    <!--displays for current song, time elapsed/duration, play/pause/stop previous/next-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="100dp"
            android:text="@string/media_previous"
            android:id="@+id/previous"
            android:textSize="50sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="100dp"
            android:text="@string/media_stop"
            android:id="@+id/stop"
            android:textSize="50sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="100dp"
            android:text="@string/media_play"
            android:id="@+id/play"
            android:textSize="50sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="100dp"
            android:text="@string/media_pause"
            android:id="@+id/pause"
            android:textSize="50sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="100dp"
            android:text="@string/media_next"
            android:id="@+id/next"
            android:textSize="50sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <!--future search, play song-->

</LinearLayout>